--- a/ui/index.html
+++ b/ui/index.html
@@ -1,8 +1,135 @@
-<html>
-    <head>
-        <title>Workflow Builder UI</title>
-    </head>
-    <body>
-        Lets build UI
-    </body>
+<!doctype html>
+<html lang="en">
+<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Matrix Workflow Builder</title>
+		<script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body>
+	<!-- This example requires Tailwind CSS v2.0+ -->
+	<nav class="bg-gray-800">
+		<div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+			<div class="relative flex items-center justify-between h-16">
+				<div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+					<!-- Mobile menu button-->
+					<button type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
+						<span class="sr-only">Open main menu</span>
+						<!--
+							Icon when menu is closed.
+
+							Heroicon name: outline/menu
+
+							Menu open: "hidden", Menu closed: "block"
+						-->
+						<svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+						</svg>
+						<!--
+							Icon when menu is open.
+
+							Heroicon name: outline/x
+
+							Menu open: "block", Menu closed: "hidden"
+						-->
+						<svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+						</svg>
+					</button>
+				</div>
+				<div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
+					<div class="flex-shrink-0 flex items-center">
+						<!-- <img class="block lg:hidden h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-500.svg" alt="Workflow Builder">
+						<img class="hidden lg:block h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-indigo-500-mark-white-text.svg" alt="Workflow Builder"> -->
+						<p class="text-white text-xl font-medium">Matrix Workflow Builder</p>
+					</div>
+					<div class="hidden sm:block sm:ml-6">
+						<div class="flex space-x-4">
+							<!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+							<a href="#" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page">Dashboard</a>
+							<a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Workflows</a>
+							<a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Bots</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Mobile menu, show/hide based on menu state. -->
+		<div class="sm:hidden" id="mobile-menu">
+			<div class="px-2 pt-2 pb-3 space-y-1">
+				<!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+				<a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">Dashboard</a>
+
+				<a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Team</a>
+
+				<a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Projects</a>
+
+				<a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Calendar</a>
+			</div>
+		</div>
+	</nav>
+
+	<!-- This example requires Tailwind CSS v2.0+ -->
+	<div class="py-12 bg-white">
+		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+		<div class="lg:text-center">
+			<p class="text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">Dashboard</p>
+			<p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">
+				Start a chat with Matrix bot to get your login link
+			</p>
+		</div>
+
+		<div class="mt-10">
+			<dl class="space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10">
+			<div class="relative">
+				<dt>
+				<div class="absolute flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M7 19h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v10a2 2 0 002 2zM9 9h6v6H9V9z" />
+					</svg>
+				</div>
+				<p class="ml-16 text-lg leading-6 font-medium text-gray-900">Workflows</p>
+				</dt>
+				<dd class="mt-2 ml-16 text-base text-gray-500">
+				<a href="text-xs">Add a workflow</a> or view all workflows currently configured.
+				</dd>
+			</div>
+
+			<div class="relative">
+				<dt>
+				<div class="absolute flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2" />
+					</svg>
+				</div>
+				<p class="ml-16 text-lg leading-6 font-medium text-gray-900">Bot users</p>
+				</dt>
+				<dd class="mt-2 ml-16 text-base text-gray-500">
+				Setup a bot user to be able to post messages
+				</dd>
+			</div>
+			</dl>
+		</div>
+		</div>
+	</div>
+
+	<!-- This example requires Tailwind CSS v2.0+ -->
+	<div class="bg-gray-50">
+		<div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
+		<h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+			<span class="block">Get started by setting up your first workflow &rarr;</span>
+			<!-- <span class="block text-indigo-600">Start your free trial today.</span> -->
+		</h2>
+		<div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
+			<div class="inline-flex rounded-md shadow">
+			<a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+				Add Workflow
+			</a>
+			</div>
+		</div>
+		</div>
+	</div>
+
+</body>
 </html>
